# lsm

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
.github/workflows/: deploy.yml  rust.yml
proto/: kv.proto
scripts/: deploy.sh
src/: cli.rs  config.rs  handlers.rs  lib.rs  main.rs  server.rs
src/cli/: cli.rs  config.rs  main.rs
src/lib/: config.rs  lib.rs
src/lib/wal/: log.rs  message.rs
src/server/: config.rs  handlers.rs  main.rs  protobuf.rs  signals.rs
src/wal/: message.rs  mod.rs  reader.rs  writer.rs
