[package]
name = "lsm"
version = "0.1.0"
edition = "2024"

[lib]
name = "kv_store_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "kv_store_server"
path = "src/server/main.rs"

[[bin]]
name = "kv_store_cli"
path = "src/cli/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
tonic-prost-build = "*"
